Add links to footer

--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
 <h2>Contact</h2>
 <p>Veronica is currently based near Oslo, Norway, and she is available for both full-time and freelance work. <br>
     Contact her on <a href="mailto:veronicaisabelle@live.dk">veronicaisabelle@live.dk</a></p>
+        <br>
+        <br>
+        <a href="https://linkedin.com/in/veronisab">Linkedin</a> - <a href="https://github.com/veronisab">Github</a> 
     </footer>
 </body>
 </html>
