--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         <article>
             <h4>Figma</h4>
             <div>
-                <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FI1qWi567hxA4GQZAWdgpOb%2FUntitled%3Fpage-id%3D0%253A1%26node-id%3D1%253A2%26viewport%3D150%252C368%252C0.2%26scaling%3Dscale-down%26starting-point-node-id%3D1%253A2" allowfullscreen></iframe>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="400" height="250" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FI1qWi567hxA4GQZAWdgpOb%2FCafe-join-page%3Fpage-id%3D0%253A1%26node-id%3D1%253A2%26starting-point-node-id%3D1%253A2" allowfullscreen></iframe>
             </div>
-        </article>
+                </article>
 
     </section>
 </main>
