--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     Contact her on <a href="mailto:veronicaisabelle@live.dk">veronicaisabelle@live.dk</a></p>
         <br>
         <br>
-        <a href="https://linkedin.com/in/veronisab">Linkedin</a> - <a href="https://github.com/veronisab">Github</a> 
+        <p><a href="https://linkedin.com/in/veronisab">Linkedin</a> - <a href="https://github.com/veronisab">Github</a></p>
     </footer>
 </body>
 </html>
