--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
     <h2>Exercises</h2>
     <section>
       
+                        <article>
+            <h4>Javascript Knitting Counter</h4>
+            <img src="images/counter.jpg" alt="Screenshot of Knitting Counter">
+            <p>My first little JavaScript project at Scrimba, making a counter app. I decided to make one that lets you count how many rows you have knitted,
+               as that I something I have needed myself when traveling with my knitting projects!</p>
+            <div>
+                <button><a href="https://veronisab.github.io/knitting-counter">Live site</a></button>
+                <button><a href="https://github.com/veronisab/knitting-counter">Github</a></button>
+            </div>
+        </article>
+
 
         <article>
             <h4>Interactive rating card</h4>
@@ -124,13 +135,6 @@
                 <button><a href="https://github.com/veronisab/robofrends">Github</a></button>
             </div>
         </article>
-
-        <article>
-            <h4>Figma</h4>
-            <div>
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FI1qWi567hxA4GQZAWdgpOb%2FCafe-join-page%3Fpage-id%3D0%253A1%26node-id%3D1%253A2%26starting-point-node-id%3D1%253A2" allowfullscreen></iframe>
-            </div>
-                </article>
 
     </section>
 </main>
