Add collection project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div>
                 <a href="https://anjanedremo.com/" target="_blank"><img src="/images/anja-screenshot.jpg" alt="Screenshot"></a>
                 <p>Website made in Squarespace for the Norwegian saxophone player Anja Nedremo.</p>
-                <p>Most of the photos is also taken by Veronica.</p>
+                <p>Most of the photos were also taken by Veronica.</p>
                     <button><a href="https://anjanedremo.com/" target="_blank">Live site</a></button>
             </div>
         </article>
@@ -47,10 +47,20 @@
             <div>
                 <a href="https://kvintetnordvind.com/" target="_blank"><img src="images/nordvind-screenshot.jpg" alt="Screenshot"></a>
                 <p>Website made in Squarespace for the Danish woodwind quintet Nordvind.</p>
-                <p>Most of the photos is also taken by Veronica.</p>                    <button><a href="https://kvintetnordvind.com/" target="_blank">Live site</a></button>
+                <p>Most of the photos were also taken by Veronica.</p>                    <button><a href="https://kvintetnordvind.com/" target="_blank">Live site</a></button>
             </div>
         </article>
 
+        <article>
+            <h3>Code collection</h3>
+            <div>
+                <a href="https://kvintetnordvind.com/" target="_blank"><img src="images/collection-screenshot.jpg" alt="Screenshot"></a>
+                <p>A collection/clipboard of things I found useful, often look for or just code I want to save for later. Might turn into some tutorials 
+                    for people wanting to learn the basics of web development</p>
+                         <button><a href="https://www.veronisab.github.io/collection" target="_blank">Live site</a></button>
+                         <button><a href="https://github.com/veronisab/knitting-counter">Github</a></button>
+            </div>
+        </article>
 
         <article>
             <h3>Scandinavian Saxophone Festival</h3>
