--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h3>Code collection</h3>
             <div>
                 <a href="https://kvintetnordvind.com/" target="_blank"><img src="images/collection-screenshot.jpg" alt="Screenshot"></a>
-                <p>A collection/clipboard of things I found useful, often look for or just code I want to save for later. Might turn into some tutorials 
+                <p>A collection/clipboard of things I found useful, often look for or just code I want to save for later. Might later turn into tutorials 
                     for people wanting to learn the basics of web development</p>
                          <button><a href="https://www.veronisab.github.io/collection" target="_blank">Live site</a></button>
                          <button><a href="https://github.com/veronisab/knitting-counter">Github</a></button>
