--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
             </div>
         </article>
 
+              <article>
+            <h3>Vero simple wp-theme</h3>
+            <div>
+                <img src="https://github.com/veronisab/vero-simple-wptheme/blob/3d346a415e5e95d7b62dadaf266be17f9c905177/screenshot.png" alt="Screenshot">
+                <p>A super simple WordPress theme, not meant to be used as-is, but as a starting point for making custom designs.</p>
+                         <button><a href="https://github.com/veronisab/vero-simple-wptheme">Github</a></button>
+            </div>
+        </article>
+        
+
         <article>
             <h3>Scandinavian Saxophone Festival</h3>
                 <img src="images/ssf-screenshot.jpg" alt="Screenshot">
