Add unit converter

--- a/index.html
+++ b/index.html
@@ -104,7 +104,18 @@
     <h2>Exercises</h2>
     <section>
       
-                        <article>
+        https://veronisab.github.io/unitconverter/
+      <article>
+            <h4>Unit Converter</h4>
+            <img src="images/unitconverter.jpg" alt="Screenshot of Unit Converter">
+            <p>A JavaScript unit converter made as part of the Scrimba course. Coded from scratch, design/css copied from an image. </p>
+            <div>
+                <button><a href="https://veronisab.github.io/unitconverter">Live site</a></button>
+                <button><a href="https://github.com/veronisab/unitconverter">Github</a></button>
+            </div>
+        </article>
+        
+        <article>
             <h4>Javascript Knitting Counter</h4>
             <img src="images/counter.jpg" alt="Screenshot of Knitting Counter">
             <p>My first little JavaScript project at Scrimba, making a counter app. I decided to make one that lets you count how many rows you have knitted,
