--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
                 <p>Most of the photos were also taken by Veronica.</p>                    <button><a href="https://kvintetnordvind.com/" target="_blank">Live site</a></button>
             </div>
         </article>
+        
+             <article>
+            <h3>Aurora Remme website</h3>
+            <div>
+                <a href="https://auroraremme.com" target="_blank"><img src="images/aurora-screenshot.jpg" alt="Screenshot"></a>
+                <p>Simple website in pure HTML/CSS for oboist Aurora Remme.</p>
+                             <button><a href="https://auroraremme.com/" target="_blank">Live site</a></button>
+                                         <button><a href="https://github.com/veronisab/aurora-remme">Github</a></button>
+            </div>
+        </article>
 
         <article>
             <h3>Code collection</h3>
