--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div>
                 <img src="/images/vero-screenshot.jpg" alt="Screenshot">
                 <p>Website for Veronica's career as an oboist.</p>
-                <p>One is version made in React, and an older version made in plain HTML/CSS (with a tiny amout of JavaScript for the hamburger menu).</p>
+                <p>One is version made in React, and an older version made in plain HTML/CSS.</p>
                 <div>
                         <button><a href="https://veronisab.github.io/oboe/" target="_blank">React</a></button>
                         <button><a href="https://veronisab.github.io/oboist" target="_blank">HTML/CSS</a></button>
