--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
             </div>
         </article>
 
+        
+      <article>
+            <h3>BoredBot</h3>
+            <img class="card-main-img" src="images/boredbot.jpg" alt="Screenshot of BoredBot">
+            <p>A simple app using fetch() to get random activites from the BoredAPI when clicking the button. </p>
+            <div class="btn-box">
+                <button><a href="https://veronisab.github.io/boredbot">Live site</a></button>
+                <button><a href="https://github.com/veronisab/boredbot">Github</a></button>
+            </div>
+        </article>
+        
       <article>
             <h3>Unit Converter</h3>
             <img class="card-main-img" src="images/unitconverter.jpg" alt="Screenshot of Unit Converter">
