--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
             <div>
                 <img class="card-main-img" src="images/vero-screenshot.jpg" alt="Screenshot">
                 <p>Website for Veronica's career as an oboist.</p>
-                <p>veronicaisabelle.com made in HTML/CSS, and another version as my first React page.</p>
+                <p>veronicaisabelle.com made in HTML/CSS.</p>
                 <div class="btn-box">
                     <button><a href="https://veronicaisabelle.com" target="_blank">HTML/CSS</a></button>
-                    <button><a href="https://veronisab.github.io/oboe/" target="_blank">React</a></button>
                 </div>
             </div>
         </article>
