--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <p>Website for Veronica's career as an oboist.</p>
                 <p>veronicaisabelle.com made in HTML/CSS.</p>
                 <div class="btn-box">
-                    <button><a href="https://veronicaisabelle.com" target="_blank">HTML/CSS</a></button>
+                    <button><a href="https://www.veronisab.github.io/oboist" target="_blank">Live site</a></button>
+                    <button><a href="https://www.github.com/veronisab/oboist" target="_blank">Github</a></button>
+                    
                 </div>
             </div>
         </article>
