Fix broken link

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <p>Website for Veronica's career as an oboist.</p>
                 <p>veronicaisabelle.com made in HTML/CSS.</p>
                 <div class="btn-box">
-                    <button><a href="https://www.veronisab.github.io/oboist" target="_blank">Live site</a></button>
-                    <button><a href="https://www.github.com/veronisab/oboist" target="_blank">Github</a></button>
+                    <button><a href="https://veronisab.github.io/oboist" target="_blank">Live site</a></button>
+                    <button><a href="https://github.com/veronisab/oboist" target="_blank">Github</a></button>
                     
                 </div>
             </div>
