--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div>
                 <img class="card-main-img" src="images/vero-screenshot.jpg" alt="Screenshot">
                 <p>Website for Veronica's career as an oboist.</p>
-                <p>veronicaisabelle.com made in HTML/CSS.</p>
+                <p>veronicaisabelle.com in React.</p>
                 <div class="btn-box">
-                    <button><a href="https://veronisab.github.io/oboist" target="_blank">Live site</a></button>
-                    <button><a href="https://github.com/veronisab/oboist" target="_blank">Github</a></button>
+                    <button><a href="https://veronicaisabelle.com" target="_blank">Live site</a></button>
+                    <button><a href="https://github.com/veronisab/react-oboist" target="_blank">Github</a></button>
                     
                 </div>
             </div>
